Closed Bug 27732 Opened 26 years ago Closed 26 years ago

Main message in dialogs with edit fields don't wrap

Categories

(SeaMonkey :: UI Design, defect, P3)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: morse, Assigned: bugs)

References

Details

(Whiteboard: [PDT+] today)

A dialog created with UniversalDialog can have several elements -- namely a main message, up to two edit fields, a checkbox, and up to four buttons. If the dialog does not have any edit fields, the main message wraps if it is bigger than the dialog box. If there are edit fields, the main message stays on one long line, causing the dialog to become extremely wide.
This bug makes it impossible to put up the disclaimer that we need for single signon (see bug 27725)
Blocks: 27725
Keywords: beta1
Putting on the PDT+ radar for beta1.
Whiteboard: [PDT+]
Removing PDT+ for re-consideration. C'mon, this isn't a beta 1 blocker.
Whiteboard: [PDT+]
Restoring PDT+. Ben will look at it and find out how hard it is to fix ...
Assignee: don → ben
Whiteboard: [PDT+]
Target Milestone: M14
fix (of sorts) checked in. set maximum possible width of dialog to 400px. (my experience tells me em yields unpredictable results)
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Pulled the change that was just made to commonDialog.xul and am still seeing the problem. Here's a scenerio to demonstrate it. 1. Make the "firstPassword" message in extensions/wallet/src/wallet.properties be something extremely long. (This is where we are going to put the disclaimer that is required in bug 27725.) 2. If wallet/single-signon has been used in the past, delete any files for wallet from profile (or, alternatively, start with a new profile). 3. Go to a site that has a login form, fill it out, and submit it 4. Answer yes to the question about wanting to save the password 5. The dialog that pops up asking you to create a master password will have the text you entered in step 1 all displayed on a single line with no wrapping.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
fix in hand
Whiteboard: [PDT+] → [PDT+] today
Bonsai indicates that the fix has been checked into the tree.
Status: REOPENED → RESOLVED
Closed: 26 years ago26 years ago
Resolution: --- → FIXED
QA Contact: paulmac → elig
elig to verify
Verified. Now I can get bug 27725 fixed the correct way (I am currently forcing the wrap by putting line-feeds into my string). Thanks Ben.
Status: RESOLVED → VERIFIED
Product: Core → Mozilla Application Suite
You need to log in before you can comment on or make changes to this bug.