adding disclaimer message with ad-hoc wrap, see bug 27732